midnight.css
/* ... */
.chat__52833:has(.profilePanel__12596) .searchBar_e0c60b {
	width: 316px !important;
	margin-left: calc(var(--spacing) + 8px);
}
.chat__52833:has(.membersWrap__90226) .searchBar_e0c60b {
	width: 216px !important;
	margin-left: calc(var(--spacing) + 8px);
}

/* add spacing */
.base__3e6af /* outside edges */ {
	margin: 0 var(--spacing) var(--spacing) 0;
}
.sidebar_ded4b5 /* channel list and user panel */,
.content__1a4fe /* between chat and member list */ {
	gap: var(--spacing);
}
.sidebar_ded4b5 /* channel list and chat */ {
	margin-right: var(--spacing);
}
.sidebar_ded4b5.hidden__3ab58 {
	margin-right: 0;
}
.resizeHandle_f1a098 /* pretend to be a margin */ {
	width: var(--spacing);
}
.wrapper_bd2abe.fullScreen__5263c .callContainer_cbde45 /* fullscreen vc */ {
	margin: var(--spacing) 0 0 var(--spacing);
}

/* fix padding */
#vc-spotify-player /* vencord spotify */,
.container_d667ff /* vc panel */,
.panel_bd8c76 /* stream panel */ {
	padding: 10px;
}

/* add rounded corners */
.container__590e2 /* channel list */,
.panels__58331 /* user panels */,
.privateChannels__93473 /* dms list */,
.container__5c7e7 /* friends page */,
.applicationStore_fc7d76 /* nitro page */,
#app-mount .container_d3a736 /* message requests */,
.shop_b31ed2 /* discord shop */,
.container_a87c5e /* family center */,
.container_def45c /* message request */,
#app-mount .callContainer_cbde45 /* vc */, 
.chat__52833 /* general chat container (for browse channels page */,
.animatedContainer__341f6 /* server image card */ {
	border-radius: var(--roundness);
	overflow: hidden;
}
.container__93316 /* main chat */,
.chatContent__5dca8 /* main chat inner */,
.container_b2ce9c /* members list */,
.members__9f47b /* members list inner */,
.searchResultsWrap__9f374 /* search results */,
.profilePanel__12596 /* profile panel outer */,
.userPanelOuter__880e5 /* profile panel inner */,
.userPanelInner_eddf4c /* profile panel inner inner */ {
	border-radius: 0 0 var(--roundness) var(--roundness);
}

/* separate guilds panel background */
.guilds__2b93a {
	background: var(--bg-4);
	border-radius: var(--roundness);
	margin: 0 var(--spacing) var(--spacing) var(--spacing);
}
.guilds__2b93a.hidden__7c832 {
	margin: 0;
}
#app-mount .scroller__3d071 {
	padding: 12px 0;
}
.guilds__2b93a::after /* add bottom scroll shadow */,
.members__9f47b::after {
	content: '';
	position: absolute;
	background: linear-gradient(transparent, var(--bg-4));
	bottom: 0px;
	width: 100%;
	height: 20px;
	pointer-events: none;
}
.guilds__2b93a::before /* add top scroll shadow */ {
	content: '';
	position: absolute;
	background: linear-gradient(var(--bg-4), transparent);
	top: 0px;
	width: 100%;
	height: 20px;
	pointer-events: none;
	z-index: 2;
}
.childWrapper__01b9c {
	background: var(--bg-3);
}
/* UNCOMMENT IF YOU REMOVE THE ABOVE SECTION "separate guilds panel background" */
.expandedFolderBackground__1bec6 /* expanded folder bg */,
.folder__17546 /* folder circle when expanded */,
.folderIconWrapper__72239 /* folder circle inner */ {
	/* background-color: var(--bg-4) !important; */
}

/* extra top margin for macos and custom clients */
.base__3e6af {
	margin-top: var(--spacing);
}
.platform-win .base__3e6af {
	margin-top: 0;
}

/* top corner title */
div[class^='wordmarkWindows'] > svg {
	display: none;
}
div[class^='wordmarkWindows']::after {
	content: 'Midnight';
	display: block;
	position: relative;
	width: 200px;
	height: 16px;
	line-height: 16px;
	font-family: var(--font-headline);
	font-size: 10px;
	font-weight: 600;
	color: var(--text-5);
}

/* window controls */
div[class^='typeWindows'] {
	height: 20px;
}
div[class^='winButton'] > svg {
	display: none;
}
div[class^='winButton'] {
	background: none !important;
	top: 0;
	width: 20px;
	height: 20px;
	margin: -2px 4px 0px 0px;
}
div[class^='winButton']::after {
	content: '';
	height: 12px;
	width: 12px;
	border-radius: 12px;
}
div[class^='winButton']:hover::after {
	filter: brightness(0.8);
}
div[class^='winButton']:active::after {
	transform: scale(0.9);
}
div[class^='winButtonClose']::after {
	background-color: hsl(350, 50%, 50%) !important;
}
div[class^='winButtonMinMax']:nth-child(3)::after {
	background-color: hsl(150, 50%, 50%) !important;
}
div[class^='winButtonMinMax']:nth-child(4)::after {
	background-color: hsl(50, 50%, 50%) !important;
}

/* add moon */
.childWrapper__01b9c > svg {
	display: var(--discord-icon);
}
.childWrapper__01b9c:has(> svg)::before {
	content: '';
	display: var(--moon-icon);
	position: absolute;
	width: 65%;
	height: 65%;
	background: var(--text-4);
	-webkit-mask-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c4/Font_Awesome_5_solid_moon.svg');
}
.wrapper_d281dd:hover .childWrapper__01b9c::before {
	transition: background-color 0.15s ease-out, transform 0.3s ease-out;
	transform: rotate(0deg) scale(1);
}
.wrapper_d281dd:hover > .childWrapper__01b9c::before,
.wrapper_d281dd.selected_f5ec8e > .childWrapper__01b9c::before {
	background: var(--text-1);
	transform: rotate(-360deg) scale(0.8);
}

/* improve unread divider */
.divider_b9338f {
	border-width: 4px;
	border-radius: 4px;
}
.endCap__95d53 {
	margin-top: -1px;
	padding-top: 2px;
}
/* improve highlight message left edge */
.message__80c10.mentioned__58017:before,
.replying_d7b6ad:before {
	width: 4px;
	border-radius: 4px;
}

/* make emoji selector same color */
.emojiButtonNormal__73cd3 .sprite__294b3 {
	filter: grayscale(100%) brightness(40%) sepia(0.9) hue-rotate(180deg) !important;
}
/* filter login image */
.artwork__8fc92 {
	filter: saturate(0.3) hue-rotate(-15deg) brightness(0.4);
}
/* ... */

